
2007-08-28 (REL_1_4_0) Christian Walter <wolti@sil.at>:
 Notes: Added support for HCS08. Fixed some small bugs in the documentation
  for the porting layer.

 Detailed notes:
  - FEATURES (HCS08) : Added new port.
  - BUGS (ALL)       : Fixed some small bugs in the porting guide.

2007-07-17 (REL_1_3_0) Christian Walter <wolti@sil.at>:
 Notes: Added ARM7/AT91SAM7X port. Added Linux/TCP port from Steven Guo.

 Detailed notes:
  - FEATURES (ARM7): Added ARM7/AT91SAM7x port.
  - FEATURES (LINUX): Added Linux/TCP port from Steven Guo.
  - BUGS (ALL): Fixed bug in <eMBFuncReadInputRegister> where the high
      byte of the register count was ignored. This does not have a
	  practical impact because the actual number of registers is always
	  lower.

2007-07-17 (REL_1_3_0) Christian Walter <wolti@sil.at>:
 Notes: Added Linux/TCP port. Fixed bug in MSP430 port.
 Detailted notes:
  - FEATURE (LINUX): Added Linux/TCP port.
  - BUGS (MSP430): Fixed bug with calculating the timer value.

2007-04-25 (REL_1_2_0) Christian Walter <wolti@sil.at>:
 Notes: Added LPC214X ARM port with Keil compiler. Added Z8Encore port for
   Z8F6422 microcontroller.

 Detailed notes:
  - FEATURE (ARM): Added LPC214X ARM port for Keil ARM 2.41.
  - FEATURE (Z8ENCORE): Added Z8F6422 for Z8Encore using the ZDS II - Z8
      Encore! development tools.

2007-02-18 (REL_1_1_2) Christian Walter <wolti@sil.at>:
 Notes: Fixed typo with the defined defining the supported Modbus
   functions.  Fixed bug when illegal slave address was passed to eMBInit
   where the error was not detected. Fixed typo in the holding registers
   where the frame for write multiple registers was parsed with the wrong 
   constants. The fix is not critical because the values matched. Fixed bug 
   in discrete input registers implementation where the frame was not parsed
   correctly. Added new support for a CodeWarrior Coldfire port.

 Detailed notes:
   - BUG (ALL): Modbus functions are compiled into the stack conditionally