@@ -11,7 +11,7 @@ PROJECT_NAME           = FreeModbus
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 1.4
+PROJECT_NUMBER         = 1.5
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
