@@ -16,7 +16,7 @@
   * License along with this library; if not, write to the Free Software
   * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
   *
-  * File: $Id: main.dox,v 1.15 2007/09/12 12:39:24 wolti Exp $
+  * File: $Id: main.dox,v 1.16 2010/06/05 09:59:51 wolti Exp $
   */
 
 /*! \mainpage FreeModbus
@@ -28,6 +28,9 @@ The latest version of this document is available on http://freemodbus.berlios.de
 FreeModbus is a Modbus ASCII/RTU and Modbus TCP implementation for embedded systems. It provides an implementation of the <em>Modbus Application Protocol v1.1a</em> and supports the RTU/ASCII transmission modes defined in the <em>Modbus over serial line specification 1.0</em>. Since version 0.7 FreeModbus also supports Modbus/TCP. Version 0.9 added the first Modbus/TCP port for embedded systems using the <a href="http://www.sics.se/~adam/lwip/">lwIP</a> TCP/IP stack. 
 
 \section into_port Ports
+
+\par Cortex M3 devices:
+ - Atmel AT91SAM3S. 
 
 \par ARM devices:
 - STR71X with FreeRTOS/GCC. See STR71X/simple2.c for an example.
